completed basic add restaurant and reviews functionality (index; show; create)

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,10 @@
   </head>
 
   <body>
-    <%= yield %>
+    <%= render "shared/navbar" %>
+    <div id="wrapper" style="min-height: calc(100vh - 70px - 70px); ">
+      <%= yield %>
+    </div>
+    <%= render "shared/footer" %>
   </body>
 </html>
