--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,2 +1,10 @@
-<h1>Restaurants#new</h1>
-<p>Find me in app/views/restaurants/new.html.erb</p>
+<div class="container my-5">
+  <div class="row">
+    <div class="col-xs-12 col-sm-6 offset-sm-3">
+      <div class="p-4 bg-light border border-secondary rounded ">
+        <h2 class="my-4 ">Create a new restaurant</h2>
+        <%= render "restaurant_form" %>
+      </div>
+    </div>
+  </div>
+</div>
