--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,2 +1,16 @@
-<h1>Restaurants#index</h1>
-<p>Find me in app/views/restaurants/index.html.erb</p>
+<div class="container my-5">
+  <div class="row">
+    <% @restaurants.each do |r| %>
+    <div class="col-xs-6 col-sm-6 col-lg-4 mb-3">
+      <div class="card">
+      <div class="card-body position-relative">
+        <h4 class="card-title"><%= r.name %></h4>
+        <span class="badge badge-info position-absolute p-2" style="right: 10px; top:5px;"><%= r.category %></span>
+        <p class="card-text"><%= r.address %></p>
+        <%= link_to "See more", restaurant_path(r), class: "card-link" %>
+      </div>
+    </div>
+    </div>
+    <% end %>
+  </div>
+</div>
